[package]
name = "wnd_macros"
version = "0.1.0"
edition = "2021"
authors = ["WhyNotDogie"]
license = "ISC"
description = "Macros that ylyl"

[features]
full = ["todo_attr", "thread"]
todo_attr = []
thread = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.27"
syn = { version = "2.0.18", features = ["full"] }

[dev-dependencies]
wnd_macros = { path = ".", features = ["todo_attr", "thread"] }
